:icons: font

= Gentics Mesh Changelog

[[vNextMajorRelease]]
== Next Major Release

icon:plus[] Core: The OrientDB graph database will be updated to version 3.0

[[v0.16.1]]
== 0.16.1 (TBD)

icon:plus[] Demo: The AngularJS version of the link:https://demo.getmesh.io/demo[demo application] was updated.

icon:check[] Events: The `mesh.node.deleted` event was not handled correctly. This has been fixed now.

icon:check[] Core: After resetting a job via rest (admin/jobs/::uuid::/error) the job was not processed again.
                    This has been fixed now.

icon:check[] Core: When the migration for multiple nodes faild during a schema migration the error details could become very long.
					This has been fixed now. Error details in the job list will be truncated after a certain amount of characters.

icon:check[] Core: Image transformation calls previously did not copy the image properties of the binary field. 
                   Instead the filename and other properties were not copied to the new binary image field. This has been fixed now.

icon:plus[] Core: Gentics Mesh can now be downgraded if the link:https://getmesh.io/docs/beta/administration-guide.html#database-revisions[database revision] matches the needed revision of Gentics Mesh.

icon:plus[] Clustering: Gentics Mesh is now able to form cluster between different server versions. 
			A database revision hash will now be used to determine which versions of Gentics Mesh can form a cluster.
			Only instances with the same database revision hash are allowed to form a cluster.
			The current revision hash info is included in the `/api/v1` endpoint response.

icon:check[] Elasticsearch: Fixed handling of `search.url` settings which contained https URLs.

icon:check[] REST: The `/api/v1/auth/logout` endpoint will now correctly delete the `mesh.token` cookie.

[[v0.16.0]]
== 0.16.0 (07.02.2018)
