@@ -1,6 +1,6 @@
 package com.gentics.mesh.search.impl;
 
-import com.gentics.elasticsearch.client.ElasticsearchOkClient;
+import com.gentics.elasticsearch.client.okhttp.ElasticsearchOkClient;
 
 import io.vertx.core.json.JsonObject;
 
